--- a/Front/src/components/Card.module.css
+++ b/Front/src/components/Card.module.css
@@ -1,56 +1,63 @@
-.wrapCard{
+/* Card.module.css */
+
+/* Contêiner que envolve cada cartão */
+.wrapCard {
+    display: flex;
     justify-content: center;
     align-items: center;
-    display: flex;
-    gap: 2vh;
-    flex-direction: column;
-    gap: 8vw;
-    flex-wrap: wrap;
-}
-
-.Card{
-    border-radius: 20px !important;
-    border: 4px solid white !important;
-    transition: transform 0.3s ease-in-out;
-    border: 1;
-    width: 22rem;
-    height: 35rem;
-    padding-top: 1vh;
-    background-color: white;
-    align-items: center;
+    padding: 10px;
+  }
+  
+  /* Estilo do cartão */
+  .Card {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 180px; /* Ajuste conforme necessário */
+    text-align: center;
+    padding: 15px;
+    transition: transform 0.3s;
     display: flex;
     flex-direction: column;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    margin-bottom: 5vh;
-}
-
-.Card:hover{
-    transform: scale(1.1);
-}
-
-.cardTitle{
-    display: flex;
-    text-align: center;
-}
-
-.cardText{
-    justify-content: left;
-    display: flex;
     align-items: center;
-    gap: 2vh;
-    text-align: center;
-    top: 0;
-}
-
-.cardBody{
-    gap: 2vh;
-    text-align: center;
-}
-
-.img2{
-    border-bottom-left-radius: 20px ;
-    border-bottom-right-radius: 20px;
-    border-radius: 20px;
-    height: 18rem;
-    width: 18rem;
-}
+  }
+  
+  .Card:hover {
+    transform: scale(1.05);
+  }
+  
+  /* Estilo do título do cartão */
+  .cardTitle {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  /* Estilo da imagem dentro do cartão */
+  .img2 {
+    border-radius: 8px;
+    margin-bottom: 10px;
+    width: 100%;
+    height: auto;
+  }
+  
+  /* Estilo do corpo do cartão */
+  .cardBody {
+    font-size: 14px;
+    color: #555;
+  }
+  
+  /* Estilo do texto dentro do corpo do cartão */
+  .cardText {
+    margin-bottom: 10px;
+  }
+  
+  /* Estilo do link "Saiba mais" */
+  .readMore {
+    color: blue;
+    cursor: pointer;
+    text-decoration: underline;
+    font-size: 14px;
+  }
+  
