--- a/Front/src/pages/style.module.css
+++ b/Front/src/pages/style.module.css
@@ -1,19 +1,27 @@
 .login_container {
 	width: 100%;
 	min-height: 100vh;
-	background-color: #f5f5f5;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+    overflow-x: hidden;
+    background-image: url('../assets/biblio.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    flex-direction: column;
 }
 
 .login_form_container {
-	width: 900px;
-	height: 500px;
-	display: flex;
-	border-radius: 10px;
-	box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),
-		0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
+	background-color: #fff;
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;  padding: 32px;
+    width: 400px;
+    height: 500px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-right: 60vw;
 }
 
 .left {
@@ -41,10 +49,8 @@
 .input {
 	outline: none;
 	border: none;
-	width: 370px;
 	padding: 15px;
 	border-radius: 10px;
-	background-color: #edf5f3;
 	margin: 5px 0;
 	font-size: 14px;
 }
@@ -60,23 +66,15 @@
 	text-align: center;
 }
 
-.right {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	background-color: #3bb19b;
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
-}
-
-.right h1 {
-	margin-top: 0;
-	color: white;
-	font-size: 40px;
-	align-self: center;
-}
+.firstAcess{
+    color: #007BFF;
+    text-decoration: none;
+    size: 2px;
+  }
+  
+  .firstAcess:hover, .forgotPassword:hover{
+    color: black;
+  }
 
 .white_btn,
 .green_btn {
@@ -92,7 +90,46 @@
 }
 
 .green_btn {
-	background-color: #3bb19b;
+	background-color: #007BFF;
+    border: none;
+    border-radius: 12px;
 	color: white;
-	margin: 10px;
+    cursor: pointer;
+    margin-bottom: 50px;
+}
+
+.green_btn:hover{
+    background-color: #0456ae;
+}
+
+input[type="email"],
+input[type="password"] {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  display: block;
+  margin: 16px 0;
+  padding: 8px;
+  width: 100%;
+  height: 60%;
+}
+
+.forgotPassword {
+    color: #007BFF;
+    margin-left: 50px;
+    text-decoration: none;
+}
+
+form input[type="checkbox"] {
+    margin: 4px;
+  }
+  
+  .check{
+    display: flex; 
+    align-items: center;
+    font-size: 15px;
+    margin-left: 4px;
+  }
+  
+a{
+    font-size: 14px;
 }
