--- a/Front/src/components/Card.module.css
+++ b/Front/src/components/Card.module.css
@@ -13,12 +13,13 @@
   .Card {
     background-color: #fff;
     border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 290px;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;  padding: 32px;
+    width: 350px;
+    height: 600px;
     text-align: center;
     padding: 15px;
-    transition: transform 0.3s;
+    transition: 0.3s;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,8 +38,10 @@
   .img2 {
     border-radius: 8px;
     margin-bottom: 10px;
-    width: 100%;
-    height: auto;
+    width: 250px;
+    height: 400px;
+    object-fit: cover; 
+    image-rendering: crisp-edges;
   }
   
   .cardBody {
